--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,6 @@ name = "anothertls"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-ibig = "0.3.6"
+ibig = { version = "0.3.6", default-features = false }
 log = "0.4.17"
-num-bigint = "0.4.3"
-num-traits = "0.2.15"
