--- a/anothertls/Cargo.toml
+++ b/anothertls/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 ibig = { version = "0.3.6", default-features = false }
 
+[profile.release]
+debug = true
 # log = {version = "0.4.17", optional = true }
 # [features]
 # debug = ["dep:log"]
