--- a/anothertls/Cargo.toml
+++ b/anothertls/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+x509-cert = {version = "0.1.1", default-features = false }
 ibig = { version = "0.3.6", default-features = false }
 
 [profile.release]
