--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -3,6 +3,7 @@ name = "anothertls-examples"
 version = "0.0.1"
 edition = "2021"
 publish = false
+default-run = "server_https"
 
 [dependencies]
 anothertls = { path = "../anothertls" }
